noinst_LIBRARIES = libcourgette.a
bin_PROGRAMS = courgette-tool courgette-minimal-tool

AM_CXXFLAGS=-std=gnu++0x -I courgette/

libcourgette_a_SOURCES = \
	courgette/base/sync_socket_posix.cc \
	courgette/base/vlog.cc \
	courgette/base/timer/elapsed_timer.cc \
	courgette/base/timer/mock_timer.cc \
	courgette/base/timer/timer.cc \
	courgette/base/timer/hi_res_timer_manager_posix.cc \
	courgette/base/environment.cc \
	courgette/base/deferred_sequenced_task_runner.cc \
	courgette/base/location.cc \
	courgette/base/json/json_file_value_serializer.cc \
	courgette/base/json/string_escape.cc \
	courgette/base/json/json_string_value_serializer.cc \
	courgette/base/json/json_reader.cc \
	courgette/base/json/json_parser.cc \
	courgette/base/json/json_writer.cc \
	courgette/base/allocator/allocator_extension.cc \
	courgette/base/allocator/type_profiler_tcmalloc.cc \
	courgette/base/allocator/allocator_extension_thunks.cc \
	courgette/base/allocator/type_profiler_control.cc \
	courgette/base/allocator/type_profiler.cc \
	courgette/base/value_conversions.cc \
	courgette/base/sys_info_posix.cc \
	courgette/base/thread_task_runner_handle.cc \
	courgette/base/third_party/xdg_user_dirs/xdg_user_dir_lookup.cc \
	courgette/base/third_party/symbolize/demangle.cc \
	courgette/base/third_party/symbolize/symbolize.cc \
	courgette/base/third_party/dmg_fp/dtoa.cc \
	courgette/base/third_party/dmg_fp/dtoa_wrapper.cc \
	courgette/base/third_party/dmg_fp/g_fmt.cc \
	courgette/base/third_party/nspr/prtime.cc \
	courgette/base/third_party/icu/icu_utf.cc \
	courgette/base/linux_util.cc \
	courgette/base/profiler/scoped_profile.cc \
	courgette/base/profiler/scoped_tracker.cc \
	courgette/base/profiler/alternate_timer.cc \
	courgette/base/profiler/tracked_time.cc \
	courgette/base/async_socket_io_handler_posix.cc \
	courgette/base/sha1_portable.cc \
	courgette/base/posix/global_descriptors.cc \
	courgette/base/posix/file_descriptor_shuffle.cc \
	courgette/base/posix/unix_domain_socket_linux.cc \
	courgette/base/synchronization/condition_variable_posix.cc \
	courgette/base/synchronization/waitable_event_posix.cc \
	courgette/base/synchronization/waitable_event_watcher_posix.cc \
	courgette/base/synchronization/lock_impl_posix.cc \
	courgette/base/synchronization/lock.cc \
	courgette/base/synchronization/cancellation_flag.cc \
	courgette/base/command_line.cc \
	courgette/base/base_paths_posix.cc \
	courgette/base/tracking_info.cc \
	courgette/base/bind_helpers.cc \
	courgette/base/pending_task.cc \
	courgette/base/build_time.cc \
	courgette/base/supports_user_data.cc \
	courgette/base/logging.cc \
	courgette/base/sequenced_task_runner.cc \
	courgette/base/version.cc \
	courgette/base/strings/utf_string_conversion_utils.cc \
	courgette/base/strings/string_util.cc \
	courgette/base/strings/string_number_conversions.cc \
	courgette/base/strings/sys_string_conversions_posix.cc \
	courgette/base/strings/utf_offset_string_conversions.cc \
	courgette/base/strings/latin1_string_conversions.cc \
	courgette/base/strings/string16.cc \
	courgette/base/strings/string_split.cc \
	courgette/base/strings/stringprintf.cc \
	courgette/base/strings/nullable_string16.cc \
	courgette/base/strings/utf_string_conversions.cc \
	courgette/base/strings/string_util_constants.cc \
	courgette/base/strings/string_piece.cc \
	courgette/base/strings/safe_sprintf.cc \
	courgette/base/task_runner.cc \
	courgette/base/safe_strerror_posix.cc \
	courgette/base/nix/mime_util_xdg.cc \
	courgette/base/nix/xdg_util.cc \
	courgette/base/sequence_checker_impl.cc \
	courgette/base/path_service.cc \
	courgette/base/memory/weak_ptr.cc \
	courgette/base/memory/discardable_memory_shmem.cc \
	courgette/base/memory/discardable_memory_emulated.cc \
	courgette/base/memory/shared_memory_nacl.cc \
	courgette/base/memory/aligned_memory.cc \
	courgette/base/memory/ref_counted_memory.cc \
	courgette/base/memory/discardable_memory_manager.cc \
	courgette/base/memory/ref_counted.cc \
	courgette/base/memory/memory_pressure_listener.cc \
	courgette/base/memory/discardable_shared_memory.cc \
	courgette/base/memory/discardable_memory.cc \
	courgette/base/memory/singleton.cc \
	courgette/base/memory/discardable_memory_linux.cc \
	courgette/base/memory/discardable_memory_shmem_allocator.cc \
	courgette/base/memory/shared_memory_posix.cc \
	courgette/base/system_monitor/system_monitor.cc \
	courgette/base/guid.cc \
	courgette/base/sync_socket_nacl.cc \
	courgette/base/debug/debugger.cc \
	courgette/base/debug/dump_without_crashing.cc \
	courgette/base/debug/trace_event_memory.cc \
	courgette/base/debug/trace_event_impl_constants.cc \
	courgette/base/debug/profiler.cc \
	courgette/base/debug/stack_trace_posix.cc \
	courgette/base/debug/asan_invalid_access.cc \
	courgette/base/debug/trace_event_impl.cc \
	courgette/base/debug/proc_maps_linux.cc \
	courgette/base/debug/crash_logging.cc \
	courgette/base/debug/task_annotator.cc \
	courgette/base/debug/stack_trace.cc \
	courgette/base/debug/debugger_posix.cc \
	courgette/base/debug/trace_event_argument.cc \
	courgette/base/debug/trace_event_synthetic_delay.cc \
	courgette/base/debug/trace_event_system_stats_monitor.cc \
	courgette/base/debug/alias.cc \
	courgette/base/run_loop.cc \
	courgette/base/callback_internal.cc \
	courgette/base/big_endian.cc \
	courgette/base/base_paths.cc \
	courgette/base/guid_posix.cc \
	courgette/base/callback_helpers.cc \
	courgette/base/atomicops_internals_x86_gcc.cc \
	courgette/base/tracked_objects.cc \
	courgette/base/event_recorder_stubs.cc \
	courgette/base/values.cc \
	courgette/base/scoped_native_library.cc \
	courgette/base/threading/platform_thread_posix.cc \
	courgette/base/threading/thread_id_name_manager.cc \
	courgette/base/threading/thread_local_storage.cc \
	courgette/base/threading/thread.cc \
	courgette/base/threading/platform_thread_linux.cc \
	courgette/base/threading/sequenced_worker_pool.cc \
	courgette/base/threading/thread_restrictions.cc \
	courgette/base/threading/non_thread_safe_impl.cc \
	courgette/base/threading/thread_checker_impl.cc \
	courgette/base/threading/worker_pool_posix.cc \
	courgette/base/threading/watchdog.cc \
	courgette/base/threading/post_task_and_reply_impl.cc \
	courgette/base/threading/thread_local_storage_posix.cc \
	courgette/base/threading/simple_thread.cc \
	courgette/base/threading/thread_local_posix.cc \
	courgette/base/threading/worker_pool.cc \
	courgette/base/threading/thread_collision_warner.cc \
	courgette/base/files/memory_mapped_file_posix.cc \
	courgette/base/files/file_path_watcher_stub.cc \
	courgette/base/files/scoped_file.cc \
	courgette/base/files/file_proxy.cc \
	courgette/base/files/file_util_proxy.cc \
	courgette/base/files/file.cc \
	courgette/base/files/file_path_watcher.cc \
	courgette/base/files/memory_mapped_file.cc \
	courgette/base/files/scoped_temp_dir.cc \
	courgette/base/files/file_path.cc \
	courgette/base/files/file_enumerator.cc \
	courgette/base/files/file_enumerator_posix.cc \
	courgette/base/files/file_util.cc \
	courgette/base/files/file_util_linux.cc \
	courgette/base/files/protect_file_posix.cc \
	courgette/base/files/file_util_posix.cc \
	courgette/base/files/file_path_constants.cc \
	courgette/base/files/file_posix.cc \
	courgette/base/files/file_path_watcher_linux.cc \
	courgette/base/files/important_file_writer.cc \
	courgette/base/sys_info.cc \
	courgette/base/check_example.cc \
	courgette/base/power_monitor/power_monitor.cc \
	courgette/base/power_monitor/power_monitor_device_source.cc \
	courgette/base/power_monitor/power_monitor_device_source_posix.cc \
	courgette/base/power_monitor/power_monitor_source.cc \
	courgette/base/metrics/stats_counters.cc \
	courgette/base/metrics/histogram_delta_serialization.cc \
	courgette/base/metrics/field_trial.cc \
	courgette/base/metrics/statistics_recorder.cc \
	courgette/base/metrics/sample_vector.cc \
	courgette/base/metrics/bucket_ranges.cc \
	courgette/base/metrics/user_metrics.cc \
	courgette/base/metrics/histogram_samples.cc \
	courgette/base/metrics/stats_table.cc \
	courgette/base/metrics/sparse_histogram.cc \
	courgette/base/metrics/sample_map.cc \
	courgette/base/metrics/histogram.cc \
	courgette/base/metrics/histogram_base.cc \
	courgette/base/metrics/histogram_snapshot_manager.cc \
	courgette/base/native_library_posix.cc \
	courgette/base/base_switches.cc \
	courgette/base/lazy_instance.cc \
	courgette/base/md5.cc \
	courgette/base/cpu.cc \
	courgette/base/process/process_metrics_linux.cc \
	courgette/base/process/memory_linux.cc \
	courgette/base/process/memory_stubs.cc \
	courgette/base/process/process_metrics.cc \
	courgette/base/process/launch.cc \
	courgette/base/process/process_handle_linux.cc \
	courgette/base/process/process_linux.cc \
	courgette/base/process/memory.cc \
	courgette/base/process/process_handle_posix.cc \
	courgette/base/process/kill.cc \
	courgette/base/process/process_posix.cc \
	courgette/base/process/process_iterator_linux.cc \
	courgette/base/process/kill_posix.cc \
	courgette/base/process/launch_posix.cc \
	courgette/base/process/process_metrics_posix.cc \
	courgette/base/process/process_iterator.cc \
	courgette/base/process/internal_linux.cc \
	courgette/base/process/process_info_linux.cc \
	courgette/base/task/cancelable_task_tracker.cc \
	courgette/base/hash.cc \
	courgette/base/time/time.cc \
	courgette/base/time/default_tick_clock.cc \
	courgette/base/time/clock.cc \
	courgette/base/time/default_clock.cc \
	courgette/base/time/tick_clock.cc \
	courgette/base/time/time_posix.cc \
	courgette/base/at_exit.cc \
	courgette/base/rand_util_posix.cc \
	courgette/base/pickle.cc \
	courgette/base/rand_util.cc \
	courgette/base/barrier_closure.cc \
	courgette/base/sys_info_linux.cc \
	\
	courgette/adjustment_method_2.cc \
	courgette/adjustment_method.cc \
	courgette/assembly_program.cc \
	courgette/crc.cc \
	courgette/difference_estimator.cc \
	courgette/disassembler.cc \
	courgette/disassembler_elf_32_arm.cc \
	courgette/disassembler_elf_32.cc \
	courgette/disassembler_elf_32_x86.cc \
	courgette/disassembler_win32_x86.cc \
	courgette/disassembler_win32_x64.cc \
	courgette/encoded_program.cc \
	courgette/ensemble_apply.cc \
	courgette/ensemble.cc \
	courgette/ensemble_create.cc \
	courgette/memory_allocator.cc \
	courgette/simple_delta.cc \
	courgette/streams.cc \
	\
	courgette/third_party/lzma_sdk/7zAlloc.c \
	courgette/third_party/lzma_sdk/7zBuf.c \
	courgette/third_party/lzma_sdk/7zCrc.c \
	courgette/third_party/lzma_sdk/7zCrcOpt.c \
	courgette/third_party/lzma_sdk/7zDec.c \
	courgette/third_party/lzma_sdk/7zFile.c \
	courgette/third_party/lzma_sdk/7zIn.c \
	courgette/third_party/lzma_sdk/7zStream.c \
	courgette/third_party/lzma_sdk/Alloc.c \
	courgette/third_party/lzma_sdk/Bcj2.c \
	courgette/third_party/lzma_sdk/Bra86.c \
	courgette/third_party/lzma_sdk/Bra.c \
	courgette/third_party/lzma_sdk/CpuArch.c \
	courgette/third_party/lzma_sdk/LzFind.c \
	courgette/third_party/lzma_sdk/Lzma2Dec.c \
	courgette/third_party/lzma_sdk/LzmaDec.c \
	courgette/third_party/lzma_sdk/LzmaLib.c \
	\
	courgette/third_party/bsdiff_apply.cc \
	courgette/third_party/bsdiff_create.cc

courgette_minimal_tool_SOURCES = courgette/courgette_minimal_tool.cc
courgette_minimal_tool_LDADD = libcourgette.a -lpthread

courgette_tool_SOURCES = courgette/courgette_tool.cc
courgette_tool_LDADD = libcourgette.a -lpthread
